--- a/package.json
+++ b/package.json
@@ -53,6 +53,12 @@
     "webpack-dev-server": "^3.1.9"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.8",
+    "@fortawesome/free-solid-svg-icons": "^5.5.0",
+    "@fortawesome/react-fontawesome": "^0.1.3",
+    "@types/auto-bind": "^1.2.0",
+    "@types/react-router-dom": "^4.3.1",
+    "auto-bind": "^1.2.1",
     "axios": "^0.18.0",
     "classnames": "^2.2.6",
     "dotenv-webpack": "^1.5.7",
@@ -60,7 +66,9 @@
     "react-dom": "^16.5.2",
     "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "react-router-redux": "^5.0.0-alpha.9",
+    "react-switch": "^3.0.4",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0"
   }
