--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "A frontend boilerplate with React, Redux and Typescript",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest tests",
     "start": "webpack-dev-server --mode development --hot --progress --color --port 8080 --open --disable-host-check --host: 0.0.0.0",
     "build": "webpack -p --progress --colors",
     "format": "prettier --write \"src/**/*.{ts,tsx,css}\""
@@ -15,6 +15,7 @@
     "@babel/core": "^7.1.2",
     "@types/classnames": "2.2.6",
     "@types/history": "4.7.1",
+    "@types/jest": "^23.3.9",
     "@types/node": "10.11.7",
     "@types/query-string": "^6.1.1",
     "@types/react": "16.4.16",
@@ -30,6 +31,7 @@
     "file-loader": "^2.0.0",
     "html-loader": "^1.0.0-alpha.0",
     "html-webpack-plugin": "^4.0.0-alpha",
+    "jest": "^23.6.0",
     "mini-css-extract-plugin": "^0.4.4",
     "postcss": "^7.0.5",
     "postcss-browser-reporter": "^0.5.0",
@@ -42,6 +44,7 @@
     "react-hot-loader": "^4.3.11",
     "redux-devtools-extension": "^2.13.5",
     "style-loader": "^0.23.1",
+    "ts-jest": "^23.10.4",
     "ts-loader": "^5.2.1",
     "tslint": "^5.11.0",
     "tslint-config-airbnb": "^5.11.0",
@@ -57,12 +60,14 @@
     "@fortawesome/free-solid-svg-icons": "^5.5.0",
     "@fortawesome/react-fontawesome": "^0.1.3",
     "@types/auto-bind": "^1.2.0",
+    "@types/faker": "^4.1.4",
     "@types/react-router-dom": "^4.3.1",
     "auto-bind": "^1.2.1",
     "aws-amplify": "^1.1.9",
     "axios": "^0.18.0",
     "classnames": "^2.2.6",
     "dotenv-webpack": "^1.5.7",
+    "faker": "^4.1.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-redux": "^5.0.7",
